--- a/BookStore/Views/Customers/Create.cshtml
+++ b/BookStore/Views/Customers/Create.cshtml
@@ -1,11 +1,12 @@
-﻿@model BookStore.Models.Category
+﻿@model BookStore.Models.Customer
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h2>Create a Category</h2>
+<h2>Create a Customer</h2>
 
+<h4>Customer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,6 +16,11 @@
                 <label asp-for="Name" class="control-label mt-2"></label>
                 <input asp-for="Name" class="form-control mt-2" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group my-3">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control mt-2" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group my-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
