--- a/BookStore/Views/Customers/Index.cshtml
+++ b/BookStore/Views/Customers/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<BookStore.Models.Category>
+﻿@model IEnumerable<BookStore.Models.Customer>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1 class="mb-4">Categories</h1>
+<h1 class="mb-4">Customers Index</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Create New</a>
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -23,6 +26,9 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
